# fork_pnp_synth

./: .gitignore  min_max_values.py  pyproject.toml  ranges_for_metal_wood_sounds.txt  test_gen_ranges.py  visualize_embeddings.py
exp_embeddings_linearity/: compute_embeddings.py  exp_embeddings_linearity.py  generate_thetas.py  load_models_and_audios.py  random_trajectories.py  sobolev_distance.py  synthesize_audios.py
exp_invalidate_metrics_1/: mix2morph_lcs.py  soundmorpher_correspondence_mfccs.py
exp_invalidate_metrics_example_1/: exp_functions.py  exp_invalidate_metrics_example_1.py  mix2morph_lcs.py  morphfader_smoothness_clap_corr.py  sobolev_distance.py  soundmorpher_correspondence_mfccs.py
exp_invalidate_metrics_fpc/: exp_functions.py  exp_invalidate_metrics_fpc.py  mix2morph_lcs.py  morphfader_smoothness_clap_corr.py  sobolev_distance.py  soundmorpher_correspondence_mfccs.py  soundmorpher_intermediateness_total_cdpam.py  soundmorpher_smoothness_cdpam.py
scripts/: [Wrong Implementation] mix2morph_lcs.py  example_1.py  gen.py  gen_range_logp_extended.py  mix2morph_lcs.py  morphfader_smoothness_clap_corr.py  morphing_cdpam.py  sobolev_distance.py  soundmorpher_correspondence_mfccs.py  soundmorpher_intermediateness_total_cdpam.py  soundmorpher_smoothness_cdpam.py  test_gen.py  test_gen_metal_to_wood.py  test_gen_ranges.py  visualize_embeddings.py
