[project]
name = "pnp_synth"
version = "0.1.0.dev0"
description = "Perceptual-Neural-Physical (PNP) modeling of musical timbre"
requires-python=">=3.10, <=3.11"
dependencies = [
    "fork-fadtk @ https://github.com/TheoChasleCauchy/fork-fadtk.git",
    "librosa",
    "pandas",
    "sklearn",
    "soundfile",
    "nnAudio",
    "joblib",
    "numpy<2",
    "scipy>=1.11.0",
    "matplotlib",
    "fork-cdpam @ https://github.com/TheoChasleCauchy/fork-cdpam.git",
    "descript-audio-codec",
    "descript-audiotools"
]

[project.urls]
"Homepage" = "https://github.com/lylyhan/perceptual_neural_physical"
"Bug Tracker" = "https://github.com/lylyhan/perceptual_neural_physical"


[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel",
]
